center align chips and fixed height chips list

--- a/src/app/sp-multi-select-dropdown/sp-multi-select-dropdown/sp-multi-select-dropdown.component.css
+++ b/src/app/sp-multi-select-dropdown/sp-multi-select-dropdown/sp-multi-select-dropdown.component.css
@@ -30,5 +30,7 @@
   
   /deep/ .mat-chip-list-wrapper {
     flex-wrap: nowrap !important;
-    overflow: hidden !important;
+    align-items: center !important;
+    overflow: hidden;
+    height: 32px;
   }
